stop body from scrolling while panel is open, but does not work on mobile device

--- a/src/assets/sass/_layout.scss
+++ b/src/assets/sass/_layout.scss
@@ -5,7 +5,7 @@ $susy: (
   global-box-sizing: border-box,
   );
 
-body.is--fixed { overflow: hidden; }
+body.is-fixed { overflow: hidden; }
 
 .wrap {
   @include container
